# docassemble-MAInformalAppellantBriefForm

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/MAInformalAppellantBriefForm/data/questions/: appellant_brief.yml  informal_appellant_brief_form.yml
docassemble/MAInformalAppellantBriefForm/data/templates/: appellant_brief.docx  appellant_brief.docx.backup2  appellant_brief_next_steps.docx  exhibit_attachment.cover_page.docx  exhibit_cover_sheet.docx  impounded_document.docx  impounded_exhibit_attachment.cover_page.docx  impounded_record_appendix_document.docx  informal_appellant_brief_form.docx  informal_appellant_brief_form_next_steps.docx  record_appendix_document.docx
