license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MAInformalAppellantBriefForm"
version = "1.2"
description = "Massachusetts informal appellant brief form"
readme = "README.md"
authors = [
    { name = "Jack Brandt", email = "john.brandt@su.suffolk.edu" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://suffolklitlab.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
